--- a/index.html
+++ b/index.html
@@ -487,6 +487,10 @@ summary {
 <h2>Lab 10 - Population genomics based on high throughput sequencing (HTS)</h2>
 <p><a href="Lab_10_EvoGeno_BenEarle.html">Lab 10</a></p>
 </div>
+</div>
+<div id="lab-11--" class="section level1">
+<h1>Lab 11 -</h1>
+<p><a href="Lab_11_EvoGeno_BenEarle.html">Lab 11</a></p>
 <div id="lab-12---network-analysis-using-cytoscape-and-rcy3" class="section level2">
 <h2>Lab 12 - Network Analysis using Cytoscape and RCy3</h2>
 <p><a href="Lab_12_EvoGeno_BenEarle.html">Lab 12</a></p>
